2019-04-25  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart.h (BSCARD1, BSCARD2...): New.
	(BSCARD): Remove.

	* contrib/usart-stm32f103.c (usart_config_baud): Rename
	from usart_config_brr, changing API.

2019-04-24  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32l4.c: New.
	* mcu/chx-stm32l4.c: New.  Not support suspend yet.
	* mcu/stm32l.h: New.
	* mcu/clk_gpio_init-stm32l.c: New.

2019-04-17  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32l4.c: New.
	* mcu/usb-st-common.c: Factor out from usb-stm32f103.c.

2019-04-12  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32l4.c: New.
	* contrib/usart-common.c: Factor out from usart-stm32f103.c.

	* entry.c [__ARM_ARCH_7EM__] (entry): Fix for Cortex-M4.

2019-04-11  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c: Support Cortex-M4 (not touching FPU).

2019-04-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/clk_gpio_init-stm32f.c: Rename from clk_gpio_init-stm32.c.

	* entry.c: Use STM32F10X_HD.
	* board/board-stbee.h (STM32F10X_HD): Add.
	* board/board-stm32-primer2.h (STM32F10X_HD): Add.

2019-04-09  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_block_sendrecv): Support
	busy-wait when timeout_block_p == 0.

2019-04-08  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_block_sendrecv): New.
	(usart_init0): New.

2019-03-30  Niibe Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config_brr): New.
	(usart_config_re): New internal function.
	(handle_intr, handle_tx_ready): Use TC for smartcard.
	(usart_wait_write_completion): New internal function.
	(usart_write): Support half-duplex smartcard mode.

2019-03-29  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_read_ext): New.
	(usart_read_prepare_poll): New.

2019-03-02  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.14.
	* doc/chopstx.texi (VERSION): 1.14.

2019-03-01  NIIBE Yutaka  <gniibe@fsij.org>

	* contrib/usart-stm32f103.c (usart_config): Fix SCEN setting
	procedure.
